# awesome-ats-cv

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
agents/: openai.yaml
examples/: job-description.txt  resume-data.json
references/: action-verbs.md  ats-research.md  bullet-writing.md  end-to-end-workflow.md  formatting-rules.md  grammar-checking.md  non-kgp-general-guidance.md  process-safety.md  resource-library.md  resume-dictionary.txt  skills-packaging.md  validation-matrix.md
scripts/: __init__.py  atscv_utils.py  audit_ats_structure.py  audit_resume_content.py  check_grammar.py  extract_job_keywords.py  extract_pdf_text.py  html_to_pdf.py  lint_cv_text.py  measure_bullet_widths.py  measure_page_coverage.py  render_pdf_pages.py  render_resume_template.py  update_resume_data.py  validate_cv.py
templates/: README.md  data-ai.html  executive-leadership.html  internship-campus.html  product-analytics.html  research-academic.html  technical-sde.html
